<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/margen_material"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_scrore_goals">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/descripcion_fondo"
            android:src="@drawable/fondo_campo_futbol"/>
        <LinearLayout
            android:baselineAligned="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorFondoCampo">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_equipo_a"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/textview_goal_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_marcador_inicial"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tamanio_letra_marcador"/>
                <Button
                    android:id="@+id/button_goal_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_goal"
                    android:onClick="agregarGoalTeamA"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_equipo_b"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/textview_goal_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_marcador_inicial"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tamanio_letra_marcador"/>
                <Button
                    android:id="@+id/button_goal_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_goal"
                    android:onClick="agregarGoalTeamB"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margen_material"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_estadistica"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_faltas_a"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarFoulsTeamA"/>
            <TextView
                android:id="@+id/textview_fouls_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextoEstadistica"
                android:text="@string/texto_estadistica_faltas"
                android:layout_marginRight="@dimen/margen_stadistic"
                android:layout_marginLeft="@dimen/margen_stadistic"/>
            <TextView
                android:id="@+id/textview_fouls_b"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <Button
                android:id="@+id/button_faltas_b"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarFoulsTeamB"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margen_separador"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_estadistica"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_corners_a"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarCornersTeamA"/>
            <TextView
                android:id="@+id/textview_corners_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/colorTextoEstadistica"
                android:layout_height="wrap_content"
                android:text="@string/texto_estadistica_corners"
                android:layout_marginRight="@dimen/margen_stadistic"
                android:layout_marginLeft="@dimen/margen_stadistic"/>
            <TextView
                android:id="@+id/textview_corners_b"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <Button
                android:id="@+id/button_corners_b"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarCornersTeamB"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margen_separador"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_estadistica"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_yellow_cards_a"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarYellowCardsTeamA"/>
            <TextView
                android:id="@+id/textview_yellow_cards_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginRight="@dimen/margen_stadistic"
                android:layout_marginLeft="@dimen/margen_stadistic"
                android:textColor="@color/colorTextoEstadistica"
                android:layout_height="wrap_content"
                android:text="@string/texto_estadistica_tarjeta_amarilla"/>
            <TextView
                android:id="@+id/textview_yellow_cards_b"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <Button
                android:id="@+id/button_yellow_cards_b"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarYellowCardsTeamB"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margen_separador"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura_estadistica"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_red_card_a"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarRedCardsTeamA"/>
            <TextView
                android:id="@+id/textview_red_card_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginRight="@dimen/margen_stadistic"
                android:layout_marginLeft="@dimen/margen_stadistic"
                android:textColor="@color/colorTextoEstadistica"
                android:layout_height="wrap_content"
                android:text="@string/texto_estadistica_tarjeta_roja"/>
            <TextView
                android:id="@+id/textview_red_card_b"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/colorTextoMarcador"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamanio_letra_estadistica"
                android:text="@string/texto_marcador_inicial"/>
            <Button
                android:id="@+id/button_red_card_b"
                android:layout_width="@dimen/long_button_plus"
                android:layout_height="@dimen/long_button_plus"
                android:text="@string/texto_mas_1"
                android:onClick="agregarRedCardsTeamB"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button_reset_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_reset_button"
        android:onClick="restoreStadistics"/>
</LinearLayout>